--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,15 @@ dependencies {
     //progress dialog
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
+    // retrofit and json
+    api 'com.squareup.okhttp:okhttp-urlconnection:2.7.0'
+    api 'com.squareup.okio:okio:1.6.0'
+    api 'com.squareup.retrofit2:retrofit:2.0.0'
+    api 'com.squareup.retrofit2:converter-gson:2.0.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.0.0-beta4'
+    api 'com.squareup.retrofit2:retrofit:2.0.2'
+    api 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+    api 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+
 }
 apply plugin: 'com.google.gms.google-services'
